--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Team repository</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <a href="/">Home</a>
+        </ul>
+    </nav>
 </body>
 </html>
