--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <a href="/">Home</a>
-        </ul>
+        <a href="/">Home</a>
+        <a href="/">About</a>
     </nav>
 </body>
 </html>
