--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <a href="/">Home</a>
         <a href="/">About</a>
+        <a href="/">Blog</a>
     </nav>
 </body>
 </html>
