--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="/">Home</a>
         <a href="/">About</a>
         <a href="/">Blog</a>
+        <a href="/">Contact</a>
     </nav>
 </body>
 </html>
