--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         <a href="/">Blog</a>
         <a href="/">Contact</a>
     </nav>
+    <footer>
+        Все права защищены &copy; I_G 2021
+    </footer>
 </body>
 </html>
