Cheange last footer, the end

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="/">Contact</a>
     </nav>
     <footer>
-        Все права защищены &copy; I_G 9090
+        All rights reserved &copy; I_G 9090
     </footer>
 </body>
 </html>
